--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "stock-exchange-exercise",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "out/index.js",
   "scripts": {
-    "start": "nodemon",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc && node out/index.js"
   },
   "repository": {
     "type": "git",
@@ -19,6 +18,8 @@
   },
   "homepage": "https://github.com/elazarderi/stock-exchange-exercise#readme",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
+    "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "mongoose": "^6.5.3"
   }
 }
