--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/elazarderi/stock-exchange-exercise#readme",
   "devDependencies": {
+    "@types/config": "^3.3.0",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
@@ -27,8 +28,13 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
+    "config": "^3.3.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.3"
+    "mongoose": "^6.5.3",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.21.4",
+    "sequelize-typescript": "^2.1.3",
+    "reflect-metadata": "^0.1.3"
   }
 }
