--- a/package.json
+++ b/package.json
@@ -31,10 +31,9 @@
     "config": "^3.3.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.5.3",
     "mysql2": "^2.3.3",
+    "reflect-metadata": "^0.1.3",
     "sequelize": "^6.21.4",
-    "sequelize-typescript": "^2.1.3",
-    "reflect-metadata": "^0.1.3"
+    "sequelize-typescript": "^2.1.3"
   }
 }
