--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/elazarderi/stock-exchange-exercise#readme",
   "devDependencies": {
     "@types/config": "^3.3.0",
+    "@types/cors": "^2.8.12",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "config": "^3.3.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mysql2": "^2.3.3",
